enable tsc strick null checks

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <title>AppRun SPA</title>
   <link rel="stylesheet" href="https://unpkg.com/bootstrap/dist/css/bootstrap.min.css">
   <script src="https://unpkg.com/jquery/dist/jquery.slim.min.js"></script>
-  <script src="https://unpkg.com/browse/popper.js/dist/popper.min.js"></script>
+  <script src="https://unpkg.com/popper.js/dist/umd/popper.min.js"></script>
   <script src="https://unpkg.com/bootstrap/dist/js/bootstrap.min.js"></script>
 </body>
   <script src="dist/app.js"></script>
